tools/clang/iterator_checker/tests/invalidate-before-swap-containers.txt
invalidate-before-swap-containers.cpp:19:4: error: [iterator-checker] Potentially invalid iterator used.
  *it1 = 0;
   ^
invalidate-before-swap-containers.cpp:24:4: error: [iterator-checker] Potentially invalid iterator used.
  *it1 = 0;
   ^
2 errors generated.
